@@ -22,7 +22,7 @@ dependencies {
 /* General application attributes. */
 application {
     applicationName = 'carrotli'
-    applicationDefaultJvmArgs = ["-Xms256M", "-Xmx1G"]
+    applicationDefaultJvmArgs = ["-Xms512M", "-Xmx1G"]
     mainClassName = 'org.vitrivr.cottontail.CarrotliKt'
 }
 
@@ -38,7 +38,6 @@ idea {
 
 tasks.withType(Test) {
     useJUnitPlatform()
-    jvmArgs '--enable-preview'
 }
 
 //// Change name for distribution to C(arrot)LI.
